--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -62,3 +62,12 @@ button {
 .sprite_playlist {
   background: url(../img/playlist_sprite.png) no-repeat 0 9999px;
 }
+
+.ant-message {
+  top: auto !important;
+  bottom: 60px !important;
+}
+.ant-message .ant-message-notice-content {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+}
